tests/regression/errors/basic/undefined_var_14.csd
// Undefined variable test 14
vibez.spill("Using undefined:", undefined_var_14)
sus result drip = missing_variable + 14
